--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.44.4",
-    "next": "14.2.5",
-    "nodemailer": "^6.9.14",
+    "next": "^14.2.33",
+    "nodemailer": "^7.0.10",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
