--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "openai": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
