--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "train-app",
+  "name": "quiz-central",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,25 +10,26 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
-    "@supabase/supabase-js": "^2.44.4",
+    "@supabase/supabase-js": "^2.86.0",
     "google-auth-library": "^10.5.0",
-    "json-logic-js": "^2.0.3",
-    "next": "^14.2.33",
-    "nodemailer": "^7.0.10",
-    "openai": "^4.8.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "uuid": "^10.0.0"
+    "json-logic-js": "^2.0.5",
+    "next": "^16.0.7",
+    "nodemailer": "^7.0.11",
+    "openai": "^6.10.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/uuid": "^10.0.0",
+    "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "tailwindcss": "^4",
+    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.0"
   }
 }
