--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/typography": "^0.5.0",
     "@types/node": "^24.10.1",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "typescript": "^5",
-    "tailwindcss": "^4",
-    "@tailwindcss/postcss": "^4",
-    "@tailwindcss/typography": "^0.5.0"
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5"
   }
 }
